--- a/Infrastructure/Presentation/Presentation.csproj
+++ b/Infrastructure/Presentation/Presentation.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\Core\Services.Abstraction\Services.Abstraction.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"></FrameworkReference>
+	</ItemGroup>
+
 </Project>
