--- a/E-Commerce.API/appsettings.json
+++ b/E-Commerce.API/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;DataBase=ECommerceAPI;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "URLS": {
+    "BaseUrl": "https://localhost:7030/"
   }
 }
